tests/ui/consts/promoted_running_out_of_memory_issue-130687.stderr
error[E0080]: tried to allocate more memory than available to compiler
  --> $DIR/promoted_running_out_of_memory_issue-130687.rs:13:32
   |
LL | const _: &'static Data = &Data([0; (1 << 47) - 1]);
   |                                ^^^^^^^^^^^^^^^^^^ evaluation of `_` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
